--- a/templates/item/item-perk-sheet.hbs
+++ b/templates/item/item-perk-sheet.hbs
@@ -7,7 +7,7 @@
 
 <form class="{{cssClass}}" autocomplete="off">
 <table><tr><td style="border:solid 1px;">{{system.repeat.value}}</td></tr></table>
-<input type="text" name="system.repeat.value" value="{{system.repeat.value}}"/>
+<input type="text" name="system.repeat.value" value="{{system.repeat.value}}" hidden />
   <header class="sheet-header">
     <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
     <div class="header-fields">
