--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -11,22 +11,19 @@ var current={{system.caps.value}};
 document.getElementById("caps").value = Number(change) + Number(current);
 document.getElementById("modifycaps").value = '';
 }
-var penalties={{system.fatigue.value}}+{{system.hunger.value}}+{{system.dehydration.value}}+{{system.exhaustion.value}}+{{system.lvl_radiation.value}};
-document.getElementById("penalties").value = penalties;
 
 document.getElementById("healing-rate").value = Math.floor(({{system.level.value}} + {{system.abilities.end.value}})/2);
 
+document.getElementById("roll-penalties").value = Number({{system.hunger.value}}) + Number({{system.dehydration.value}}) + Number({{system.exhaustion.value}}) + Number({{system.lvl_radiation.value}}) + Number({{system.fatigue.value}});
+
 </script>
 
-
-
-
 <form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
+
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
     <div class="header-fields">
-	<input id="penalties" name="system.penalties.value" value=""  hidden/>
 	<table>
 	<tr><td style="width:250px;" class="left">
 	<table class="bio">
@@ -80,10 +77,8 @@ document.getElementById("healing-rate").value = Math.floor(({{system.level.value
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
 	<a class="item" data-tab="status">Status</a>
-    <a class="item" data-tab="features">Data</a>
-    <a class="item" data-tab="description">Description</a>
+    <a class="item" data-tab="perks">Data</a>
     <a class="item" data-tab="items">Items</a>
-    <a class="item" data-tab="spells">Spells</a>
     <a class="item" data-tab="effects">Effects</a>
   </nav>
 
@@ -91,23 +86,6 @@ document.getElementById("healing-rate").value = Math.floor(({{system.level.value
   <section class="sheet-body">
             <div class="abilities flexcol">
             <div class="ability flexrow flex-group-center">
-			<table><tr>
-            {{#each system.abilities as |ability key|}}
-			<td><label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label></td>
-			{{/each}}
-			<tr>
-			{{#each system.abilities as |ability key|}}
-			<td><input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" min="0" max="10"/></td>
-			{{/each}}
-			</tr><tr>
-			{{#each system.abilities as |ability key|}}
-			<td><span class="ability-mod" data-label="{{ability.label}}"> {{numberFormat ability.mod decimals=0 sign=true}}</span></td>
-			{{/each}}
-			 </tr></table>    
-             
-			 
-			  
-			
             </div>
           </div>
   {{!-- Owned status Tab --}}
@@ -115,6 +93,22 @@ document.getElementById("healing-rate").value = Math.floor(({{system.level.value
       <section>
         {{!-- For the main status list, span the right two columns --}}
         <section>
+		
+<table><tr>
+	{{#each system.abilities as |ability key|}}
+	<td><label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20-{{system.roll-penalties.value}}+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label></td>
+	{{/each}}
+	<tr>
+	{{#each system.abilities as |ability key|}}
+	<td><input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" min="0" max="10"/></td>
+	{{/each}}
+	</tr><tr>
+	{{#each system.abilities as |ability key|}}
+	<td><span class="ability-mod" data-label="{{ability.label}}"> {{numberFormat ability.mod decimals=0 sign=true}}</span></td>
+	{{/each}}
+</tr></table> 
+		
+		
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
           {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-status.hbs"}}
         </section>
@@ -122,21 +116,14 @@ document.getElementById("healing-rate").value = Math.floor(({{system.level.value
     </div>
 
 
-
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
-
     {{!-- Owned Items Tab --}}
     <div class="tab items" data-group="primary" data-tab="items">
        {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-items.hbs"}}
     </div>
 
-    {{!-- Owned Spells Tab --}}
-    <div class="tab spells" data-group="primary" data-tab="spells">
-      {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-spells.hbs"}}
+    {{!-- Owned Perks Tab --}}
+    <div class="tab spells" data-group="primary" data-tab="perks">
+      {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-perks.hbs"}}
     </div>
 
     {{!-- Active Effects Tab --}}
