--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -32,13 +32,13 @@
       <div class='item-controls'>
         <a
           class='item-control item-edit'
-          title='{{localize "DOCUMENT.Update" type='Perk'}}'
+          title='{{localize "DOCUMENT.Update" type='item'}}'
         >
           <i class='fas fa-edit'></i>
         </a>
         <a
           class='item-control item-delete'
-          title='{{localize "DOCUMENT.Delete" type='Perk'}}'
+          title='{{localize "DOCUMENT.Delete" type='item'}}'
         >
           <i class='fas fa-trash'></i>
         </a>
