Added-Crippled-Vaultboy
When Health hits below half or penalties exceed 9, the vaultboy image shifts to a more injured version

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -13,8 +13,13 @@ document.getElementById("modifycaps").value = '';
 }
 
 document.getElementById("healing-rate").value = Math.floor(({{system.level.value}} + {{system.abilities.end.value}})/2);
-
 document.getElementById("roll-penalties").value = Number({{system.hunger.value}}) + Number({{system.dehydration.value}}) + Number({{system.exhaustion.value}}) + Number({{system.lvl_radiation.value}}) + Number({{system.fatigue.value}});
+
+if (document.getElementById("roll-penalties").value > 9 || {{system.health.value}}<{{system.healthmax.value}}/2) {
+	document.getElementById("vault-boy-status").src="/systems/arcane-arcade-fallout/assets/vaultboy-hurt-icon.png";
+}else{
+	document.getElementById("vault-boy-status").src="/systems/arcane-arcade-fallout/assets/vaultboy-icon.png";
+}
 
 </script>
 
