--- a/templates/actor/parts/actor-armor.hbs
+++ b/templates/actor/parts/actor-armor.hbs
@@ -1,9 +1,9 @@
 
-  {{#each perks as |item id|}}
+  {{#each armors as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}'>
     <table style="border:solid 1px;">
 	<tr><td><h3>{{item.name}}</h3></td></tr>
-	<tr><td>{{{item.system.description}}}
+	<tr><td>{{item.system.description}}
 	<div class='item-controls'>
 	<a style="float:right;margin-right:10px;" class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type='perk'}}'><i class='fas fa-trash'></i></a>
 		<a style="float:right;margin-right:10px;" class='item-control item-edit' title='{{localize "DOCUMENT.Update" type='perk'}}'><i class='fas fa-edit'></i></a>
