--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -1,48 +1,42 @@
-<ol class='items-list'>
-  <li class='item flexrow items-header'>
-    <div class='item-name'>{{localize 'Name'}}</div>
-    <div class='item-formula'>{{localize 'Roll Formula'}}</div>
-    <div class='item-controls'>
-      <a
-        class='item-control item-create'
-        title='{{localize "DOCUMENT.Create" type='Item'}}'
-        data-type='item'
-      >
-        <i class='fas fa-plus'></i>
-        {{localize 'DOCUMENT.New' type='item'}}
-      </a>
-    </div>
-  </li>
-  {{#each gear as |item id|}}
+<style>
+table{
+	border-solid 1px;
+}
+.sheet .armor-stats td{
+	border:solid 1px;
+	
+}
+</style>
+<table>
+<tr>
+<td class="inventory-slot armorslot" style="50%">
+{{#each armors as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}'>
-      <div class='item-name'>
-        <div class='item-image'>
-          <a class='rollable' data-roll-type='item'>
-            <img
-              src='{{item.img}}'
-              title='{{item.name}}'
-              width='24'
-              height='24'
-            />
-          </a>
-        </div>
-        <h4>{{item.name}}</h4>
-      </div>
-      <div class='item-formula item-prop'>{{item.system.formula}}</div>
-      <div class='item-controls'>
-        <a
-          class='item-control item-edit'
-          title='{{localize "DOCUMENT.Update" type='item'}}'
-        >
-          <i class='fas fa-edit'></i>
-        </a>
-        <a
-          class='item-control item-delete'
-          title='{{localize "DOCUMENT.Delete" type='item'}}'
-        >
-          <i class='fas fa-trash'></i>
-        </a>
-      </div>
-    </li>
+    <table>
+	<tr><td><h2>{{item.name}}</h2></td></tr>
+	<tr><td>
+		  <table class="armor-stats">
+	  <tr>
+	  <td>Cost</td><td>AC</td><td>DT</td><td>Slots</td><td>Load</td><td>STR Req.</td></tr>
+	  <tr>
+	  <td>{{{system.base-cost.value}}}</td>
+	  <td id="armor-ac">{{{system.armor-class.value}}}</td>
+	  <td id="armor-dt">{{{system.damage-threshold.value}}}</td>
+	  <td>{{{system.slots.value}}}</td>
+	  <td>{{{system.load.value}}}</td>
+	  <td>{{{system.str-req.value}}}</td>
+	  </tr>
+</table>
+	
+	
+	<div class='item-controls'>
+	<a style="float:right;margin-right:10px;" class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type='perk'}}'><i class='fas fa-trash'></i></a>
+		<a style="float:right;margin-right:10px;" class='item-control item-edit' title='{{localize "DOCUMENT.Update" type='perk'}}'><i class='fas fa-edit'></i></a>
+	</div></td></tr>
+	</table>
+</li>
   {{/each}}
-</ol>
+</td>
+<td class="inventory-slot weapons" style="width:50%">Weapons Go Here.</td>
+</tr>
+</table>
