--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -48,10 +48,9 @@ document.getElementById("damage-threshold-form").value= Number(armor_dt);
 			<td class="bio-label"><span class="label">XP:</span></td>
 			<td><input id="xp" type="number" name="system.xp.value" value="{{system.xp.value}}" /></td>
 			<td><input id="modifyxp" onchange="updatexp(this.value)" class="modify" placeholder="modify" type="number" /></td></tr>			
-			<tr><td><img style="width:50px;height:50px;border:none;" src="/systems/arcane-arcade-fallout/assets/vaultboy/load-icon.png"></td>
+			<tr><td><img style="width:60px;height:60px;border:none;margin:0px;padding:0px;" src="/systems/arcane-arcade-fallout/assets/vaultboy/load-icon.png"></td>
 			<td style="vertical-align:middle" class="statusnum"><input  type="number" name="system.current-load.value" value="{{system.current-load.value}}"> / <input class="statusnum" type="number" name="system.loadmax.value" value="{{system.loadmax.value}}"></td></tr>
 			</table>
-	
 	</td><td>
 	<table><tr>
 		<table class="current-health current-stats" ><tr>
