--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -1,13 +1,25 @@
-
+<style>
+.perk-table td{
+	padding:5px;
+}
+</style>
+  
+  
   {{#each perks as |item id|}}
+  <div style="width:49%;float:left;display:block;">
+  
     <li class='item flexrow' data-item-id='{{item._id}}'>
-    <table style="border:solid 1px;">
-	<tr><td><h3>{{item.name}}</h3></td></tr>
-	<tr><td>{{{item.system.description}}}
-	<div class='item-controls'>
-	<a style="float:right;margin-right:10px;" class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type='perk'}}'><i class='fas fa-trash'></i></a>
-		<a style="float:right;margin-right:10px;" class='item-control item-edit' title='{{localize "DOCUMENT.Update" type='perk'}}'><i class='fas fa-edit'></i></a>
+    <table class="perk-table" style="border:solid 1px;">
+	<tr><td><h3>{{item.name}}</h3>
+	
+	</td></tr>
+	<tr><td style="height:150px;">{{{item.system.description}}}
+</td></tr>
+<tr><td style="text-align:right;padding-right:5px;"><div class='item-controls'>
+	<a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type='perk'}}'><i class='fas fa-edit'></i></a>
+	<a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type='perk'}}'><i class='fas fa-trash'></i></a>
 	</div></td></tr>
 	</table>
 </li>
+</div>
   {{/each}}
