--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -20,11 +20,6 @@ if (document.getElementById("roll-penalties").value > 9 || {{system.health.value
 	document.getElementById("vault-boy-status").src="/systems/arcane-arcade-fallout/assets/vaultboy/vaultboy-icon.png";
 }
 
-var armor_ac = document.getElementById("armor-ac").innerHTML;
-document.getElementById("armor-class-form").value= Number(armor_ac);
-
-var armor_dt = document.getElementById("armor-dt").innerHTML;
-document.getElementById("damage-threshold-form").value= Number(armor_dt);
 </script>
 
 <form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
@@ -67,7 +62,7 @@ document.getElementById("damage-threshold-form").value= Number(armor_dt);
 				<td colspan=2 class="statusnum"><input type="number" name="system.stamina.value" value="{{system.stamina.value}}" max="{{system.staminamax.value}}"/> / <input type="number" name="system.staminamax.value" value="{{system.staminamax.value}}" /></td>
 			</tr>
 		<tr>
-			<td><input id="armor-class-form" type="text" name="system.ac.value" value="{{system.ac.value}}">AC</td><td><input id="damage-threshold-form" type="text" name="system.dt.value" value="{{system.dt.value}}">DT</td>
+			<td><input id="armor-class-form" type="number" name="system.armor-class.value" value="{{system.armor-class.value}}">AC</td><td><input id="damage-threshold-form" type="number" name="system.damage-threshold.value" value="{{system.damage-threshold.value}}">DT</td>
 		</tr>
 	</table>
 	</td><td style="width:200px;">
@@ -92,7 +87,7 @@ document.getElementById("damage-threshold-form").value= Number(armor_dt);
     {{!-- Default tab is specified in actor-sheet.mjs --}}
 	<a class="item" data-tab="status">Status</a>
     <a class="item" data-tab="perks">Data</a>
-    <a class="item" data-tab="items">Items</a>
+    <a class="item" data-tab="items">Inventory</a>
     <a class="item" data-tab="effects">Effects</a>
   </nav>
 
